# roboskel_ros_resources

./: CMakeLists.txt  package.xml
3d_models/: blue_pole_small.dae
3d_models/objects/: blue_pole_big.dae  blue_pole_big.stl  blue_pole_small.dae  blue_pole_small.stl  cooking_pot.dae  cooking_pot4graspit.stl  dinosaur_E.stl  dinosaur_E2.stl  dinosaur_E4graspit.stl  lizard_Z.stl  lizard_Z2.stl  lizard_Z4graspit.stl
3d_models/obstacles/: modern_table.stl  modern_table4graspit.stl
blend_files/approximate_library_space/: approximate_library_space.blend
blend_files/artificial_wall/: artificial_wall.blend  artificial_wall.blend1
blend_files/constrained_aerial_environment/: constrained_aerial_environment.blend
blend_files/dinolizard/: dinolizard.blend  dinolizard.blend1  dinolizard_graspit.blend  dinolizard_graspit.blend1  dinolizard_moveit.blend
blend_files/fence200x100/: fence200x100.blend
blend_files/plane20x100/: plane20x100.blend
blend_files/roboskel_playground/: roboskel_playground.blend
blend_files/rulah_camera_base_prototype/: rulah_camera_base_prototype.blend  rulah_camera_base_prototype.blend1
gazebo/worlds/: constrained_aerial_environment.world  roboskel_frictionground.world  roboskel_playground.world  tidy_hospital_room.world  tidy_small_hospital_room.world  untidy_hospital_room.world  untidy_small_hospital_room.world  vineyard.world
graspit/objects/: blue_pole_big.iv  blue_pole_big.xml  blue_pole_small.iv  blue_pole_small.xml  cooking_pot.xml  dinosaur_E.xml  lizard_Z.iv  lizard_Z.xml  (+2 more)
worlds/: fz_house1.world  roboskel_slopeground.world
(+82 files in other folders)
