<?xml version="1.0"?>
<package format="2">
  <name>roboskel_ros_resources</name>
  <version>0.1.0</version>
  <description>The roboskel_ros_resources package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
